# acp-hackathon

./: README.md
acp-python/: README.md  pyproject.toml
acp-python/examples/acp_base/: README.md
acp-python/examples/acp_base/external_evaluation/: README.md  buyer.py  evaluator.py  seller.py
acp-python/examples/acp_base/funds_transfer/: README.md  buyer.py  seller.py
acp-python/examples/acp_base/helpers/: README.md  acp_helper_functions.py
acp-python/examples/acp_base/polling_mode/: buyer.py  evaluator.py  seller.py
acp-python/examples/acp_base/self_evaluation/: README.md  buyer.py
acp-python/virtuals_acp/: __init__.py  abi.py  alchemy.py  client.py  configs.py  contract_manager.py  env.py  exceptions.py  job.py  memo.py  models.py  offering.py  utils.py
acp-python/yield_finder/: broker.py  buyer.py  renderers.py  seller.py  services.py
